[package]
name = "bf-jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
crossterm = "0.26"
ratatui = { version = "0.21", default-features = false, features = ["crossterm", "macros", "all-widgets"]}